Plug memory leak when user cancels adding phrase to phrasebook

Fixes: QTBUG-83914
Change-Id: I94e8396c6e508fed699b6892f49dc63e4c10da4c
Coverity-Id: 22122
Reviewed-by: Joerg Bornemann <joerg.bornemann@qt.io>
(cherry picked from commit 33a846a4d36ec339f8ddea08641ec02f2723a202)
Reviewed-by: cherrypickbot